<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_profile"
            android:title="@string/my_profile"/>
        <item
            android:id="@+id/my_inbox"
            android:title="@string/my_inbox"/>

        <item
            android:id="@+id/my_photo"
            android:title="@string/my_photos"/>
        <item
            android:id="@+id/my_connection"
            android:title="@string/my_connection"/>
        <item
            android:id="@+id/my_timeline"
            android:title="@string/my_timeline"/>
        <item
            android:id="@+id/my_setting"
            android:title="@string/my_setting"/>
        <item
            android:id="@+id/log_out"
            android:title="@string/log_out"
            android:actionLayout="@layout/bottom_layout"/>
    </group>
</menu>