<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_button_r30"
    android:orientation="vertical"
    android:padding="@dimen/dp30">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/delete_post_title_text"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tv_content_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/delete_post_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_weight="1"
            android:fontFamily="@font/gilroy_medium"
            android:gravity="center_vertical|end"
            android:text="@string/cancel_text"
            android:textColor="@color/colorGrey"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/dp10"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_weight="1"
            android:text="Delete"
            android:theme="@style/button_theme_color_main" />

    </LinearLayout>

</LinearLayout>