<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar_left_menu"
        android:layout_width="@dimen/dp60"
        android:layout_height="@dimen/dp60"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:civ_border_color="@color/color_main"
        app:civ_border_width="@dimen/dp3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iv_avatar_left_menu"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name_user_new_feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_bold"
                android:singleLine="true"
                android:text="aaaaaaaaaa"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_time_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:fontFamily="@font/gilroy_light_italic"
                android:singleLine="true"
                android:text="aaaaaaaaaa"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_comment_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:fontFamily="@font/gilroy_medium"
            android:text="aaaaaaaaaa"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/tv_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/reply_text"
                android:textColor="@color/colorGrey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/delete_text"
                android:textColor="@color/colorGrey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/report_text"
                android:textColor="@color/colorGrey"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>